tests/echoserver/deployment-release-name-echoserver.yaml
# Source: unibox/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: echoserver
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: echoserver
    app.kubernetes.io/version: "2.2"
    helm.sh/chart: unibox-0.1.0
  name: release-name-echoserver
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: echoserver
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: echoserver
  template:
    metadata:
      labels:
        app.kubernetes.io/component: echoserver
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: echoserver
        app.kubernetes.io/version: "2.2"
        helm.sh/chart: unibox-0.1.0
    spec:
      containers:
        - image: gcr.io/kubernetes-e2e-test-images/echoserver/echoserver
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: echoserver
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
