tests/echoserver/ingress-release-name-echoserver.yaml
# Source: unibox/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: echoserver
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: echoserver
    app.kubernetes.io/version: "2.2"
    helm.sh/chart: unibox-0.1.0
  name: release-name-echoserver
  namespace: default
spec:
  rules:
    - host: echoserver.local
      http:
        paths:
          - backend:
              service:
                name: release-name-echoserver
                port:
                  name: http
            path: /
            pathType: Prefix
