tests/echoserver/service-release-name-echoserver.yaml
# Source: unibox/templates/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: echoserver
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: echoserver
    app.kubernetes.io/version: "2.2"
    helm.sh/chart: unibox-0.1.0
  name: release-name-echoserver
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: echoserver
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: echoserver
  type: ClusterIP
